# tasksontime

./: LICENSE  README  README.md  brick_tree.rb  ctimer.pl  daytime.pl  ideas.md  naughty-notify.sh  philosophy.md  pomo_point_count.pl  timetracker.rb
tests/: tc_testbricktree.rb  tc_timetracker.rb
timetracker/: Gemfile  Makefile  README.md  README.rdoc  Rakefile  TODO.txt  text.yaml  timetracker.gemspec  timetracker.rdoc
timetracker/features/: timetracker.feature
timetracker/lib/: timetracker.rb
timetracker/lib/timetracker/: brick_tree.rb  timer.rb  version.rb
timetracker/test/: tc_testbricktree.rb  test_bricks.yaml
treporter/: Cargo.toml  Makefile
treporter/src/: main.rs
