[package]
name = "gitlab_activity"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15" 

